<?xml version="1.0"?>
<package format="3">
  <name>mynt_eye</name>
  <version>0.0.1</version>
  <description>MYNT EYE depth + imu publisher for ROS 2</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>opencv</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
